# NeuroForge

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: bench_autograd.py
docs/: architecture.md  performance.md  roadmap.md
examples/: char_lm.py  cifar_like_cnn.py  mnist_classifier.py  tiny_gpt.py  transformer_demo.py
src/neuroforge/: __init__.py  tensor.py
src/neuroforge/backend/: __init__.py  base.py  numpy_backend.py
src/neuroforge/nn/: __init__.py  activations.py  attention.py  init.py  layers.py  losses.py  module.py  recurrent.py
src/neuroforge/optim/: __init__.py  adam.py  optimizer.py  schedulers.py  sgd.py
src/neuroforge/training/: __init__.py  checkpoint.py  config.py  metrics.py  trainer.py
tests/: test_modules.py  test_tensor_autograd.py  test_training_utils.py
